--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/ECAttorney/Geosoft_Task6#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mongodb": "^4.7.0",
+    "nodemon": "^2.0.16",
+    "pug": "^3.0.2"
   }
 }
